--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
       <header>
 
         <aside id="side_info">
-            <img src="res/Edwin_Portrait.jpg" alt="" style="width:100%;height:100%;"/>
+            <img src="../res/Edwin_Portrait.jpg" alt="" style="width:100%;height:100%;"/>
             <p style="font-size:150%; font-weight:bold; margin:0;">Edwin Pan</p>
             <p style="font-size:100%; margin:0;">Senior, Electrical Engineering</p>
             <a style="font-size:80%;" href="http://www.ece.illinois.edu/">Department of Electrical and Computer Engineering</a><br>
@@ -25,9 +25,10 @@
             <!--<p style="font-size:80%;"><i class="fa fa-globe"></i> Insert Address </p> -->
             <p style="font-size:80%;"><i class="fa fa-github"></i> <a href="https://github.com/edwin-pan">github.com/edwin-pan</a></p>
         </aside>
-        
+
+        <!-- <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1> -->
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
-        
+
         {% if site.logo %}
           <img src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
