--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
         <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
         {% endif %}
 
-        <p style="font-size:100%;" href="https://www.linkedin.com/in/edwinhpan/">View My LinkedIn Profile</p><br>
+        <a style="font-size:100%;" href="https://www.linkedin.com/in/edwinhpan/">View My LinkedIn Profile</a><br>
 
         {% if site.show_downloads %}
         <ul class="downloads">
@@ -53,7 +53,7 @@
         {% if site.github.is_project_page %}
         <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a> adjusted by Edwin Pan</small></p>
+        <p><small>Hosted on GitHub Pages &mdash; Original Theme by <a href="https://github.com/orderedlist">orderedlist</a> Adjusted by Edwin Pan</small></p>
       </footer>
     </div>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
