coordinates for photo, subpage for MIT-AIHN, working hyperlink?

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,7 @@
         {% if site.logo %}
           <img src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
+        <p style="font-size:100%; margin:0;">37.030141, -122.058112</p>
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
