new tab, linked

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,6 +37,8 @@
 
         <a style="font-size:100%;" href="https://www.linkedin.com/in/edwinhpan/">View My LinkedIn Profile</a><br>
 
+        <a style="font-size:100%;" href="/photography">View My Photography</a><br>
+
         {% if site.show_downloads %}
         <ul class="downloads">
           <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
