spacing of links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,9 +35,9 @@
         <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
         {% endif %}
 
-        <a style="font-size:100%;" href="https://www.linkedin.com/in/edwinhpan/">View My LinkedIn Profile</a><br>
+        <p class="view"><a style="font-size:100%;" href="https://www.linkedin.com/in/edwinhpan/">View My LinkedIn Profile</a></p>
 
-        <a style="font-size:100%;" href="/photography">View My Photography</a><br>
+        <p class="view"><a style="font-size:100%;" href="/photography">View My Photography</a></p>
 
         {% if site.show_downloads %}
         <ul class="downloads">
