--- a/stylesheet.css
+++ b/stylesheet.css
@@ -64,13 +64,13 @@
 }
 
 a {
-  color: #1772d0;
+  color: #006CB8;
   text-decoration: none;
 }
 
 a:focus,
 a:hover {
-  color: #f09228;
+  color: #00548f;
   text-decoration: none;
 }
 
